# domocracyOS

./: .gitignore  CMakeLists.example.txt  CMakeLists.txt  README.md  SETUP.md  comp  grub.cfg  linker.ld  linkerBackup.ld  recomprun  run  setup  sources.cmake
include/: bga.h  error.h  graphics.h  int.h  io.h  math.h  print.h  processManager.h  segTable.h  vga.h
libs/: bga.c  graphics.c  io.c  math.c  print.c  processManager.c  segTable.c
src/: boot.asm  kernel.asm  kernel.c  v86.asm
